--- a/Provision_app/provision_sight/ios/Runner/Info.plist
+++ b/Provision_app/provision_sight/ios/Runner/Info.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+    <string>This app needs camera access to process spatial data and provide navigation assistance</string>
+    
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app needs microphone access for voice commands and emergency recordings</string>
+    
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs location access to send your position during emergencies</string>
+    
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>This app needs location access to provide continuous assistance</string>
+    
+    <key>NSSpeechRecognitionUsageDescription</key>
+    <string>This app needs speech recognition for voice control features</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
