--- a/Provision_app/provision_sight/pubspec.yaml
+++ b/Provision_app/provision_sight/pubspec.yaml
@@ -30,6 +30,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.10.0+1
+  speech_to_text: ^6.3.0
+  flutter_tts: ^3.6.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  url_launcher: ^6.1.11
+  record: ^6.1.1
+  geolocator: ^9.0.2
+  permission_handler: ^11.0.1
+  http: ^0.13.5
+  tflite_flutter: any
+  
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +52,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  tflite_flutter_helper: ^0.2.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -56,6 +71,12 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/models/
+    - assets/audio/
+
+  
 
   # To add assets to your application, add an assets section, like this:
   # assets:
