--- a/Provision_app/provision_sight/pubspec.yaml
+++ b/Provision_app/provision_sight/pubspec.yaml
@@ -41,13 +41,16 @@ dependencies:
   permission_handler: ^11.0.1
   http: ^0.13.5
   tflite_flutter: any
-  
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  mediapipe: ^0.0.1
+  tflite: ^1.1.2
+  path_provider: ^2.1.5
+  google_ml_kit: ^0.20.0
+  google_mlkit_object_detection: ^0.15.0
+  google_mlkit_commons: ^0.11.0
 
 dev_dependencies:
   flutter_test:
@@ -73,8 +76,9 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/models/
-    - assets/audio/
+    - assets/mediapipe/model.tflite
+    - assets/mediapipe/labels.txt
+  
 
   
 
