--- a/Provision_app/provision_sight/pubspec.yaml
+++ b/Provision_app/provision_sight/pubspec.yaml
@@ -31,31 +31,33 @@ dependencies:
   flutter:
     sdk: flutter
   camera: ^0.10.0+1
-  speech_to_text: ^6.3.0
+  speech_to_text: ^7.3.0
   flutter_tts: ^3.6.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   url_launcher: ^6.1.11
   record: ^6.1.1
-  geolocator: ^9.0.2
+  geolocator: ^14.0.2
   permission_handler: ^11.0.1
   http: ^0.13.5
-  tflite_flutter: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  mediapipe: ^0.0.1
-  tflite: ^1.1.2
   path_provider: ^2.1.5
   google_ml_kit: ^0.20.0
   google_mlkit_object_detection: ^0.15.0
   google_mlkit_commons: ^0.11.0
+  image: ^4.5.4
+  local_auth: ^2.1.1
+  microphone: ^0.1.0
+  flutter_sound: ^9.28.0
+  shared_preferences: ^2.5.3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  tflite_flutter_helper: ^0.2.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -77,7 +79,6 @@ flutter:
 
   assets:
     - assets/mediapipe/model.tflite
-    - assets/mediapipe/labels.txt
   
 
   
