--- a/Provision_app/provision_sight/pubspec.yaml
+++ b/Provision_app/provision_sight/pubspec.yaml
@@ -79,9 +79,7 @@ flutter:
 
   assets:
     - assets/mediapipe/model.tflite
-  
-
-  
+    - assets/logo.jpeg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
